--- a/config/production.toml
+++ b/config/production.toml
@@ -21,7 +21,7 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
-paybox.base_url = "https://api.globalgetnet.com"
+paybox.base_url = "https://ppps.paybox.com/PPPS.php"
 payme.base_url = "https://live.payme.io/api/"
 barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
 airwallex.base_url = "https://api.airwallex.com/api/v1"
