--- a/config/development.toml
+++ b/config/development.toml
@@ -84,7 +84,7 @@ payload.base_url = "https://api.payload.com"
 payu.base_url = "https://test.payu.in/"
 paytm.base_url = "https://securestage.paytmpayments.com/"
 cashtocode.base_url = "https://cluster05.api-test.cashtocode.com"
-bluecode.base_url = "https://dev.eorder.reloadhero.com/"
+calida.base_url = "https://dev.eorder.reloadhero.com/"
 novalnet.base_url = "https://payport.novalnet.de/v2"
 nexinets.base_url = "https://apitest.payengine.de/v1"
 noon.base_url = "https://api-test.noonpayments.com/"
