--- a/config/production.toml
+++ b/config/production.toml
@@ -69,7 +69,7 @@ mifinity.base_url = "https://secure.mifinity.com/"
 braintree.base_url = "https://payments.braintree-api.com/graphql"
 volt.base_url = "https://gateway.volt.io"
 volt.secondary_base_url = "https://api.volt.io/"
-bluecode.base_url = "https://app.eorder.reloadhero.com/"
+calida.base_url = "https://app.eorder.reloadhero.com/"
 cryptopay.base_url = "https://business.cryptopay.me/"
 helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://api.dlocal.com/"
