--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -69,7 +69,7 @@ mifinity.base_url = "https://demo.mifinity.com/"
 braintree.base_url = "https://payments.sandbox.braintree-api.com/graphql"
 volt.base_url = "https://gateway.sandbox.volt.io"
 volt.secondary_base_url = "https://api.sandbox.volt.io"
-bluecode.base_url = "https://dev.eorder.reloadhero.com/"
+calida.base_url = "https://dev.eorder.reloadhero.com/"
 cryptopay.base_url = "https://business-sandbox.cryptopay.me"
 helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://sandbox.dlocal.com/"
