--- a/.github/workflows/create-hotfix-branch.yml
+++ b/.github/workflows/create-hotfix-branch.yml
@@ -2,6 +2,11 @@ name: Create hotfix branch
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to create hotfix from (e.g., 2024.12.30.1)'
+        required: true
+        type: string
 
 jobs:
   create_branch:
@@ -14,20 +19,28 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.CONNECTOR_SERVICE_CI_PAT }}
 
+      - name: Checkout the specified tag
+        shell: bash
+        run: |
+          git fetch --tags
+          git checkout tags/${{ inputs.tag }}
+
       - name: Check if the input is valid tag
         shell: bash
         run: |
-          if [[ ${{github.ref}} =~ ^refs/tags/[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
-            echo "::notice::${{github.ref}} is a CalVer tag."
+          TAG="${{ inputs.tag }}"
+          if [[ $TAG =~ ^[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
+            echo "::notice::$TAG is a valid CalVer tag."
           else
-            echo "::error::${{github.ref}} is not a CalVer tag."
+            echo "::error::$TAG is not a valid CalVer tag."
             exit 1
           fi
 
       - name: Create hotfix branch
         shell: bash
         run: |
-          HOTFIX_BRANCH="hotfix-${GITHUB_REF#refs/tags/}"
+          TAG="${{ inputs.tag }}"
+          HOTFIX_BRANCH="hotfix-$TAG"
 
           if git switch --create "$HOTFIX_BRANCH"; then
             git push origin "$HOTFIX_BRANCH"
