--- a/.github/workflows/create-hotfix-tag.yml
+++ b/.github/workflows/create-hotfix-tag.yml
@@ -2,6 +2,11 @@ name: Create tag on hotfix branch
 
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Hotfix branch to create tag from (e.g., hotfix-2024.12.30.1)'
+        required: true
+        type: string
 
 jobs:
   create_tag:
@@ -14,6 +19,12 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.CONNECTOR_SERVICE_CI_PAT }}
 
+      - name: Checkout the specified branch
+        shell: bash
+        run: |
+          git fetch --all
+          git checkout ${{ inputs.branch }}
+
       - name: Install git-cliff
         uses: taiki-e/install-action@v2
         with:
@@ -23,10 +34,11 @@ jobs:
       - name: Check if the input is valid hotfix branch
         shell: bash
         run: |
-          if [[ ${{github.ref}} =~ ^refs/heads/hotfix-[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
-            echo "::notice::${{github.ref}} is a valid hotfix branch."
+          BRANCH="${{ inputs.branch }}"
+          if [[ $BRANCH =~ ^hotfix-[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
+            echo "::notice::$BRANCH is a valid hotfix branch."
           else
-            echo "::error::${{github.ref}} is not a valid hotfix branch."
+            echo "::error::$BRANCH is not a valid hotfix branch."
             exit 1
           fi
 
@@ -34,7 +46,7 @@ jobs:
         shell: bash
         run: |
           if [[ -z "$(git tag --points-at HEAD)" ]]; then
-            echo "::notice::The latest commit is not a tag "
+            echo "::notice::The latest commit is not a tag"
           else
             echo "::error::The latest commit on the branch is already a tag"
             exit 1
