--- a/.github/workflows/create-hotfix-tag.yml
+++ b/.github/workflows/create-hotfix-tag.yml
@@ -94,7 +94,7 @@ jobs:
         run: |
           # Generate changelog content and store it in `release-notes.md`
           git-cliff --config '.github/git-cliff-changelog.toml' --strip header --tag "${NEXT_TAG}" "${PREVIOUS_TAG}^.." \
-            | sed "/## ${PREVIOUS_TAG#v}\$/,\$/d" \
+            | sed "/## ${PREVIOUS_TAG#v}\$/,\$d" \
             | sed '$s/$/\n- - -/' > release-notes.md
 
           # Append release notes after the specified pattern in CHANGELOG.md
