--- a/.github/workflows/create-hotfix-tag.yml
+++ b/.github/workflows/create-hotfix-tag.yml
@@ -2,14 +2,6 @@ name: Create tag on hotfix branch
 
 on:
   workflow_dispatch:
-    inputs:
-      branch:
-        description: "Hotfix branch to create tag from (e.g., hotfix-2024.12.30.1)"
-        required: true
-        type: string
-
-permissions:
-  contents: write
 
 jobs:
   create_tag:
@@ -22,12 +14,6 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.CONNECTOR_SERVICE_CI_PAT }}
 
-      - name: Checkout the specified branch
-        shell: bash
-        run: |
-          git fetch --all
-          git checkout ${{ inputs.branch }}
-
       - name: Install git-cliff
         uses: taiki-e/install-action@v2
         with:
@@ -37,11 +23,10 @@ jobs:
       - name: Check if the input is valid hotfix branch
         shell: bash
         run: |
-          BRANCH="${{ inputs.branch }}"
-          if [[ $BRANCH =~ ^hotfix-[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
-            echo "::notice::$BRANCH is a valid hotfix branch."
+          if [[ ${{github.ref}} =~ ^refs/heads/hotfix-[0-9]{4}\.[0-9]{2}\.[0-9]{2}\.[0-9]+$ ]]; then
+            echo "::notice::${{github.ref}} is a valid hotfix branch."
           else
-            echo "::error::$BRANCH is not a valid hotfix branch."
+            echo "::error::${{github.ref}} is not a valid hotfix branch."
             exit 1
           fi
 
