--- a/.typos.toml
+++ b/.typos.toml
@@ -23,4 +23,6 @@ THA = "THA" # Thailand (ISO 3166-1 alpha-3)
 TTO = "TTO" # Trinidad and Tobago (ISO 3166-1 alpha-3)
 jus = "jus" # Juspay
 FPR = "FPR" # Fraud Prevention Rules
+Eto = "Eto" # Gigadat transaction type
+Cpi = "Cpi" # Gigadat transaction type
 
