--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,16 @@ jobs:
       - name: Run Tests
         if: ${{ env.RUN_TESTS == 'true' }}
         shell: bash
-        run: cargo nextest run --config-file .nextest.toml --profile ci
+        run: |
+          echo "Disk usage before tests:"
+          df -h
+          du -sh target target/debug target/debug/deps 2>/dev/null || true
+          cargo nextest run --config-file .nextest.toml --profile ci || {
+            echo "Disk usage after test failure:"
+            df -h
+            du -sh target target/debug target/debug/deps 2>/dev/null || true
+            exit 1
+          }
 
   formatting:
     name: Check formatting
