--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -22,6 +22,7 @@ mitm_proxy_enabled = false
 
 [connectors]
 paybox.base_url = "https://preprod-ppps.paybox.com/PPPS.php"
+loonio.base_url = "https://integration.loonio.ca/"
 payme.base_url = "https://sandbox.payme.io/api/"
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
